<!--
fragment_bucket_list_main.xml: layout for home screen
Created by: Anna Branam
Created on: 2/21/17
Last Modified by: Anna Branam
Last Modified on: 3/3/17
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:background="@color/colorPrimaryBackground"
              android:gravity="center_horizontal"
              android:layout_gravity="center_vertical|center_horizontal|center">

    <!-- app title-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:layout_marginTop="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_name_meaning"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        />

    <!-- view random item button-->
    <Button
        android:text="@string/home_button_try"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_try_home"
        android:layout_marginTop="50dp"
        android:textSize="18sp"/>

    <!-- Create new item button-->
    <Button
        android:text="@string/home_button_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:id="@+id/btn_new_home"
        android:textSize="18sp"/>

    <!-- about app button-->
    <Button
        android:text="@string/home_button_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_about_home"
        android:textSize="18sp"/>

    <!-- exit app button-->
    <Button
        android:text="@string/home_button_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_exit_home"
        android:textSize="18sp"/>

</LinearLayout>
