<?xml version="1.0" encoding="utf-8"?>
<!--
activity_bucket_list_main.xml: layout file for main activity
Created by: Anna Branam
Created on: 2/21/17
Last Modified by: Anna Branam
Last Modified on: 3/3/17
-->

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:id="@+id/main_content"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:fitsSystemWindows="true"
                                                 tools:context="edu.indiana.akbranam.bucketlist.BucketListMainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                android:layout_weight="1">

                <!-- tabs for fragments-->
                <android.support.design.widget.TabLayout
                    android:id="@+id/sliding_tabs_main"
                    android:background="?attr/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >
                    <!-- Home tab-->
                    <android.support.design.widget.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tab_home"
                        android:text="@string/title_home_main"/>
                    <!-- To Do tab-->
                    <android.support.design.widget.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tab_todo"
                        android:text="@string/title_todo_main"/>
                    <!-- Completed tab-->
                    <android.support.design.widget.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tab_complete"
                        android:text="@string/title_complete_main"/>
                </android.support.design.widget.TabLayout>

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>



    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
    </android.support.v4.view.ViewPager>





</android.support.design.widget.CoordinatorLayout>
